@@ -695,3 +695,5 @@ genus2red(x,-x^6 - 3*x^4 - 10*x^2 - 1,3)
 genus2red(x^3+x^2+x+1,-60*x^6-203*x^5-291*x^4-244*x^3-129*x^2-41*x-7)
 \\ #1597
 genus2red(0,6*x^6+5*x^4+x^2+1,7)
+\\ #1597
+genus2red(x^3-1,1)
