@@ -71,6 +71,7 @@ BA 35- multiif did not handle correctly return() in conditions [#1590]
    51- genus2red(0,6*x^6+5*x^4+x^2+1,7) -> impossible inverse [#1597]
    52- isprime(2030967737887612953751815611955778057721609672149695775998900201419048774375002716065557720510887824952942799737911826638068045234238082640629966597954851668852106621828704531597859470496362810381251800973022824003330423370127762722630493369197869948901862977534730314352222720177713223750671181797)
        -> SEGV [#1604]
+   53- genus2red(x^3+1,1) -> type error [#1597]
 
   Added
     1- add optional argument to sumdigits to specify the base
